2016-05-27  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/command.c (cmd_sysinfo): New.
	* example-fs-bb48/sample.ld: Update.
	* example-fs-bb48/sys.h: New.
	Move crc32 functions declarations here.
	* example-fs-bb48/sys.c: Rename from first-pages.c.
	Include mcu/clk_gpio_init-kl.c to define clock_init and
	gpio_init.
	(set_led): New.
	(reset): Initialize MSP.
	(flash_config): Include comparison key.
	(crc32_init, crc32_u8, crc32_u32): Change the API.
	Write them in assembler so that the size of functions
	keep unchanged.
	(sys_version, sys_board_id, sys_board_name, sys_vector): New.

	* chopstx.c (preempt): Fix IDLE thread stack pointer.

2016-05-26  NIIBE Yutaka  <gniibe@fsij.org>

	* entry.c: Follow the move of clk_gpio_init*.c
	* example-cdc/sys.c: Likewise.
	* example-led/sys.c: Likewise.  Update to 3.0.
	* example-primer2/sys.c: Update.

	* mcu/clk_gpio_init-stm32.c: Moved.
	* mcu/clk_gpio_init-kl.c: Moved.
	* mcu/kl_sim.h: New (was in example-fs-bb48).

	* example-fs-bb48/adc_kl27z.c: Use DMA0 and DMA1.
	* example-fs-bb48/adc_kl27z.c (adc_wait_completion): Use only
	least significant 8-bit (most significant for randomness).
	* example-fs-bb48/command.c (cmd_adc): Rename from
	cmd_temperature.

2016-05-24  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/command.c: New.
	* example-fs-bb48: Update example CDC device.

2016-05-23  NIIBE Yutaka  <gniibe@fsij.org>

	* chopst.x (chx_sched) [__ARM_ARCH_6M__]: Maintain PSR.

2016-05-23  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_poll): Fix a race.  Check COUNTER.

	* example-cdc/usb-cdc.c (tty_input_char): Include newline.
	* example-cdc/sample.c: Handle newline.

	* example-fs-bb48/usb-cdc.c: Update from example-cdc.
	* example-fs-bb48/tty.h: Likewise.
	* example-fs-bb48/sample.c: Follow the change.

2016-05-20  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_usec_wait_var): internal function.
	(chopstx_wakeup_usec_wait): Remove.

2016-05-19  NIIBE Yutaka  <gniibe@fsij.org>
